resolved some stuff